Tweaking timepicker and fixing bugs.
Fixed some bugs in Timepicker, and made tweaks to match redlines.

Change-Id: I239a6294a7b2a7cd2fa200dc776a6d4f2fb24949

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="done_label">Done</string>
     <string name="am_label">AM</string>
     <string name="pm_label">PM</string>
+
+    <!-- DO NOT TRANSLATE -->
+    <string name="radial_numbers_typeface">sans-serif</string>
+    <string name="sans_serif">sans-serif</string>
 </resources>
