--- a/res/values-v14/strings.xml
+++ b/res/values-v14/strings.xml
@@ -14,9 +14,5 @@
      limitations under the License.
 -->
 
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Style for dialog labels. -->
-    <style name="time_label_thin">
-        <item name="android:fontFamily">sans-serif-thin</item>
-    </style>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 </resources>
