--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -18,8 +18,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="done_label" msgid="7007948707597430919">"Гатова"</string>
-    <string name="hour_picker_description" msgid="7586639618712934060">"Кругавы паўзунок гадзін"</string>
-    <string name="minute_picker_description" msgid="6024811202872705251">"Кругавы паўзунок хвілін"</string>
+    <string name="hour_picker_description" msgid="7586639618712934060">"Кругавы паўзунок гадзiннай стрэлкi"</string>
+    <string name="minute_picker_description" msgid="6024811202872705251">"Кругавы паўзунок хвiлiннай стрэлкi"</string>
     <string name="select_hours" msgid="7651068754188418859">"Выберыце гадзіны"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Выберыце хвіліны"</string>
 </resources>
