--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -18,8 +18,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="done_label" msgid="7007948707597430919">"Færdig"</string>
-    <string name="hour_picker_description" msgid="7586639618712934060">"Rund skyder til timer"</string>
-    <string name="minute_picker_description" msgid="6024811202872705251">"Rund skyder til minutter"</string>
+    <string name="hour_picker_description" msgid="7586639618712934060">"Cirkulær timevælger"</string>
+    <string name="minute_picker_description" msgid="6024811202872705251">"Cirkulær minutvælger"</string>
     <string name="select_hours" msgid="7651068754188418859">"Vælg timer"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Vælg minutter"</string>
 </resources>
