--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -19,7 +19,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="done_label" msgid="7007948707597430919">"Fine"</string>
     <string name="hour_picker_description" msgid="7586639618712934060">"Dispositivo di scorrimento circolare per le ore"</string>
-    <string name="minute_picker_description" msgid="6024811202872705251">"Dispositivo di scorrimento circolare per i minuti"</string>
+    <string name="minute_picker_description" msgid="6024811202872705251">"Dispositivo di scorrimento per i minuti"</string>
     <string name="select_hours" msgid="7651068754188418859">"Seleziona le ore"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Seleziona i minuti"</string>
 </resources>
