--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -17,9 +17,9 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="done_label" msgid="7007948707597430919">"Fet"</string>
-    <string name="hour_picker_description" msgid="7586639618712934060">"Control circular de les hores"</string>
-    <string name="minute_picker_description" msgid="6024811202872705251">"Control circular dels minuts"</string>
-    <string name="select_hours" msgid="7651068754188418859">"Selecciona les hores"</string>
-    <string name="select_minutes" msgid="8327182090226828481">"Selecciona els minuts"</string>
+    <string name="done_label" msgid="7007948707597430919">"Terminat"</string>
+    <string name="hour_picker_description" msgid="7586639618712934060">"Indicator circular ore"</string>
+    <string name="minute_picker_description" msgid="6024811202872705251">"Indicator circular minute"</string>
+    <string name="select_hours" msgid="7651068754188418859">"Selectați orele"</string>
+    <string name="select_minutes" msgid="8327182090226828481">"Selectați minutele"</string>
 </resources>
