Date picker layout modifications
Bug: 8581974
Change-Id: I3c547c2ebf1bb6488b823044bd7fd7bdffdab69e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,4 +45,6 @@
     <!-- DO NOT TRANSLATE -->
     <string name="sans_serif">sans-serif</string>
 
+    <!-- DO NOT TRANSLATE -->
+    <string name="day_of_week_label_typeface">sans-serif</string>
 </resources>
