--- a/res/values-v16/strings.xml
+++ b/res/values-v16/strings.xml
@@ -17,4 +17,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- DO NOT TRANSLATE -->
     <string name="radial_numbers_typeface">sans-serif-light</string>
+    <!-- DO NOT TRANSLATE -->
+    <string name="day_of_week_label_typeface">sans-serif-light</string>
 </resources>
