--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Kitelezi cha mviringo cha dakika"</string>
     <string name="select_hours" msgid="7651068754188418859">"Chagua saa"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Chagua dakika"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Gridi ya mwezi ya siku"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Orodha ya miaka"</string>
+    <string name="select_day" msgid="3973338219107019769">"Chagua mwezi na siku"</string>
+    <string name="select_year" msgid="2603330600102539372">"Chagua mwaka"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> kimechaguliwa"</string>
 </resources>
