--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Dakikalar için kaydırma çemberi"</string>
     <string name="select_hours" msgid="7651068754188418859">"Saat seçin"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Dakika seçin"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Ayın günleri tablosu"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Yıl listesi"</string>
+    <string name="select_day" msgid="3973338219107019769">"Ayı ve günü seçin"</string>
+    <string name="select_year" msgid="2603330600102539372">"Yılı seçin"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> seçildi"</string>
 </resources>
