--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"የደቂቃዎች ክብ ተንሸራታች"</string>
     <string name="select_hours" msgid="7651068754188418859">"ሰዓታትን ምረጥ"</string>
     <string name="select_minutes" msgid="8327182090226828481">"ደቂቃዎችን ምረጥ"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"የቀናት የወር ፍርግርግ"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"የዓመት ዝርዝር"</string>
+    <string name="select_day" msgid="3973338219107019769">"ወር እና ቀን ይምረጡ"</string>
+    <string name="select_year" msgid="2603330600102539372">"ዓመት ይምረጡ"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> ተመርጧል"</string>
 </resources>
