--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Кръгов плъзгач за минутите"</string>
     <string name="select_hours" msgid="7651068754188418859">"Избиране на часове"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Избиране на минути"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Месечна таблица на дните"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Списък на годините"</string>
+    <string name="select_day" msgid="3973338219107019769">"Изберете месец и ден"</string>
+    <string name="select_year" msgid="2603330600102539372">"Изберете година"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Избрахте <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
