--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Kruhový posuvník minut"</string>
     <string name="select_hours" msgid="7651068754188418859">"Zvolte hodiny"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Zvolte minuty"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Dny uspořádané po měsících"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Seznam roků"</string>
+    <string name="select_day" msgid="3973338219107019769">"Vyberte měsíc a den"</string>
+    <string name="select_year" msgid="2603330600102539372">"Vyberte rok"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Vybrána položka <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
