--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Kreisförmiger Schieberegler für Minuten"</string>
     <string name="select_hours" msgid="7651068754188418859">"Stunden auswählen"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Minuten auswählen"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Monatsraster mit einzelnen Tagen"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Jahresliste"</string>
+    <string name="select_day" msgid="3973338219107019769">"Monat und Tag auswählen"</string>
+    <string name="select_year" msgid="2603330600102539372">"Jahr auswählen"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> ausgewählt"</string>
 </resources>
