--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Κυκλικό ρυθμιστικό λεπτών"</string>
     <string name="select_hours" msgid="7651068754188418859">"Επιλέξτε ώρες"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Επιλέξτε λεπτά"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Πλέγμα ημερών του μήνα"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Λίστα ετών"</string>
+    <string name="select_day" msgid="3973338219107019769">"Επιλογή μήνα και ημέρας"</string>
+    <string name="select_year" msgid="2603330600102539372">"Επιλογή έτους"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Επιλέχτηκε το στοιχείο <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
