--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Minutes circular slider"</string>
     <string name="select_hours" msgid="7651068754188418859">"Select hours"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Select minutes"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Month grid of days"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Year list"</string>
+    <string name="select_day" msgid="3973338219107019769">"Select month and day"</string>
+    <string name="select_year" msgid="2603330600102539372">"Select year"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> selected"</string>
 </resources>
