--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Minuuttien ympyränmuotoinen liukusäädin"</string>
     <string name="select_hours" msgid="7651068754188418859">"Valitse tunnit"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Valitse minuutit"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Päiväruudukko kuukausittain"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Vuosiluettelo"</string>
+    <string name="select_day" msgid="3973338219107019769">"Valitse kuukausi ja päivä"</string>
+    <string name="select_year" msgid="2603330600102539372">"Valitse vuosi"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> on valittu"</string>
 </resources>
