--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"मिनटों का चक्राकार स्लाइडर"</string>
     <string name="select_hours" msgid="7651068754188418859">"घंटे चुनें"</string>
     <string name="select_minutes" msgid="8327182090226828481">"मिनट चुनें"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"दिनों की माह ग्रिड"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"वर्ष की सूची"</string>
+    <string name="select_day" msgid="3973338219107019769">"माह और दिन चुनें"</string>
+    <string name="select_year" msgid="2603330600102539372">"वर्ष चुनें"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> चयनित"</string>
 </resources>
