--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"분 원형 슬라이더"</string>
     <string name="select_hours" msgid="7651068754188418859">"시간 선택"</string>
     <string name="select_minutes" msgid="8327182090226828481">"분 선택"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"월별 바둑판식 날짜 표시"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"년"</string>
+    <string name="select_day" msgid="3973338219107019769">"월/일 선택"</string>
+    <string name="select_year" msgid="2603330600102539372">"연도 선택"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g>이(가) 선택됨"</string>
 </resources>
