--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Minūšu apļveida slīdnis"</string>
     <string name="select_hours" msgid="7651068754188418859">"Atlasīt stundas"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Atlasīt minūtes"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Režģis ar mēneša dienām"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Gadu saraksts"</string>
+    <string name="select_day" msgid="3973338219107019769">"Atlasiet mēnesi un dienu"</string>
+    <string name="select_year" msgid="2603330600102539372">"Atlasiet gadu"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Atlasīts: <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
