--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Penggelangsar bulatan minit"</string>
     <string name="select_hours" msgid="7651068754188418859">"Pilih jam"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Pilih minit"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Grid bulan hari"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Senarai tahun"</string>
+    <string name="select_day" msgid="3973338219107019769">"Pilih bulan dan hari"</string>
+    <string name="select_year" msgid="2603330600102539372">"Pilih tahun"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> dipilih"</string>
 </resources>
