--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Sirkulær glidebryter for minutter"</string>
     <string name="select_hours" msgid="7651068754188418859">"Angi timer"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Angi minutter"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Månedsrutenett med dager"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Årsliste"</string>
+    <string name="select_day" msgid="3973338219107019769">"Velg måneden og dagen"</string>
+    <string name="select_year" msgid="2603330600102539372">"Velg året"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> er valgt"</string>
 </resources>
