--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Kołowy suwak minut"</string>
     <string name="select_hours" msgid="7651068754188418859">"Wybierz godziny"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Wybierz minuty"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Siatka miesięczna z dniami"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Lista lat"</string>
+    <string name="select_day" msgid="3973338219107019769">"Wybierz miesiąc i dzień"</string>
+    <string name="select_year" msgid="2603330600102539372">"Wybierz rok"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Wybrałeś <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
