--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"ตัวเลื่อนหมุนระบุนาที"</string>
     <string name="select_hours" msgid="7651068754188418859">"เลือกชั่วโมง"</string>
     <string name="select_minutes" msgid="8327182090226828481">"เลือกนาที"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"ตารางเดือนของวันที่"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"รายการปี"</string>
+    <string name="select_day" msgid="3973338219107019769">"เลือกเดือนและวัน"</string>
+    <string name="select_year" msgid="2603330600102539372">"เลือกปี"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"เลือก <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
