--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Pabilog na slider ng mga minuto"</string>
     <string name="select_hours" msgid="7651068754188418859">"Pumili ng mga oras"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Pumili ng mga minuto"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Grid ng mga araw ayon sa buwan"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Listahan ng taon"</string>
+    <string name="select_day" msgid="3973338219107019769">"Pumili ng buwan at araw"</string>
+    <string name="select_year" msgid="2603330600102539372">"Pumili ng taon"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"Napili ang <xliff:g id="ITEM">%1$s</xliff:g>"</string>
 </resources>
