--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -22,4 +22,9 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"Amaminithi weslayidi esiyindingilizi"</string>
     <string name="select_hours" msgid="7651068754188418859">"Khetha amahora"</string>
     <string name="select_minutes" msgid="8327182090226828481">"Khetha amaminithi"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"Igridi yenyanga yezinsuku"</string>
+    <string name="year_picker_description" msgid="6963340404644587098">"Uhlu lonyaka"</string>
+    <string name="select_day" msgid="3973338219107019769">"Khetha inyanga nosuku"</string>
+    <string name="select_year" msgid="2603330600102539372">"Khetha unyaka"</string>
+    <string name="item_is_selected" msgid="2674929164900463786">"I-<xliff:g id="ITEM">%1$s</xliff:g> ekhethiwe"</string>
 </resources>
