--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -22,7 +22,7 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"ตัวเลื่อนหมุนระบุนาที"</string>
     <string name="select_hours" msgid="7651068754188418859">"เลือกชั่วโมง"</string>
     <string name="select_minutes" msgid="8327182090226828481">"เลือกนาที"</string>
-    <string name="day_picker_description" msgid="3968620852217927702">"ตารางเดือนของวันที่"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"ตารางวันที่ของเดือน"</string>
     <string name="year_picker_description" msgid="6963340404644587098">"รายการปี"</string>
     <string name="select_day" msgid="3973338219107019769">"เลือกเดือนและวัน"</string>
     <string name="select_year" msgid="2603330600102539372">"เลือกปี"</string>
