--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -22,7 +22,7 @@
     <string name="minute_picker_description" msgid="6024811202872705251">"מחוון דקות מעגלי"</string>
     <string name="select_hours" msgid="7651068754188418859">"בחר שעות"</string>
     <string name="select_minutes" msgid="8327182090226828481">"בחר דקות"</string>
-    <string name="day_picker_description" msgid="3968620852217927702">"בחירת ימים בחודש"</string>
+    <string name="day_picker_description" msgid="3968620852217927702">"בחירת ימים בחודש בתצוגת רשת"</string>
     <string name="year_picker_description" msgid="6963340404644587098">"רשימת שנים"</string>
     <string name="select_day" msgid="3973338219107019769">"בחר חודש ויום"</string>
     <string name="select_year" msgid="2603330600102539372">"בחר שנה"</string>
