--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -27,4 +27,6 @@
     <string name="select_day" msgid="3973338219107019769">"Velg måneden og dagen"</string>
     <string name="select_year" msgid="2603330600102539372">"Velg året"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> er valgt"</string>
+    <!-- no translation found for deleted_key (6908431551612331381) -->
+    <skip />
 </resources>
