Import translations. DO NOT MERGE
Change-Id: I401cfd222729de15792d8c5c08192872a3a3cd4b
Auto-generated-cl: translation import

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -27,6 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Vyberte mesiac a deň"</string>
     <string name="select_year" msgid="2603330600102539372">"Vyberte rok"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"Bola vybratá položka <xliff:g id="ITEM">%1$s</xliff:g>"</string>
-    <!-- no translation found for deleted_key (6908431551612331381) -->
-    <skip />
+    <string name="deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> odstránené"</string>
 </resources>
