--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -27,6 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Válassza ki a hónapot és a napot"</string>
     <string name="select_year" msgid="2603330600102539372">"Válassza ki az évet"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> kiválasztva"</string>
-    <!-- no translation found for deleted_key (6908431551612331381) -->
-    <skip />
+    <string name="deleted_key" msgid="6908431551612331381">"A(z) <xliff:g id="KEY">%1$s</xliff:g> érték törölve"</string>
 </resources>
