--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -27,6 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Pasirinkite mėnesį ir dieną"</string>
     <string name="select_year" msgid="2603330600102539372">"Pasirinkite metus"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"Elementas „<xliff:g id="ITEM">%1$s</xliff:g>“ pasirinktas"</string>
-    <!-- no translation found for deleted_key (6908431551612331381) -->
-    <skip />
+    <string name="deleted_key" msgid="6908431551612331381">"Ištrinta: <xliff:g id="KEY">%1$s</xliff:g>"</string>
 </resources>
