--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -27,6 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Выберите месяц и день"</string>
     <string name="select_year" msgid="2603330600102539372">"Выберите год"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"Выбран элемент <xliff:g id="ITEM">%1$s</xliff:g>"</string>
-    <!-- no translation found for deleted_key (6908431551612331381) -->
-    <skip />
+    <string name="deleted_key" msgid="6908431551612331381">"Цифра <xliff:g id="KEY">%1$s</xliff:g> удалена"</string>
 </resources>
