--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"選取月份和日期"</string>
     <string name="select_year" msgid="2603330600102539372">"選取年份"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"已選取 <xliff:g id="ITEM">%1$s</xliff:g>"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"已刪除 <xliff:g id="KEY">%1$s</xliff:g>"</string>
 </resources>
