--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Kies maand en dag"</string>
     <string name="select_year" msgid="2603330600102539372">"Kies jaar"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> gekies"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> uitgevee"</string>
 </resources>
