--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"تحديد الشهر واليوم"</string>
     <string name="select_year" msgid="2603330600102539372">"تحديد العام"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"تم تحديد <xliff:g id="ITEM">%1$s</xliff:g>"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"تم حذف <xliff:g id="KEY">%1$s</xliff:g>"</string>
 </resources>
