--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Välj månad och dag"</string>
     <string name="select_year" msgid="2603330600102539372">"Välj år"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> har markerats"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> har tagits bort"</string>
 </resources>
