--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"选择月份和日期"</string>
     <string name="select_year" msgid="2603330600102539372">"选择年份"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"已选择 <xliff:g id="ITEM">%1$s</xliff:g>"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"已删除 <xliff:g id="KEY">%1$s</xliff:g>"</string>
 </resources>
