--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -27,4 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Khetha inyanga nosuku"</string>
     <string name="select_year" msgid="2603330600102539372">"Khetha unyaka"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"I-<xliff:g id="ITEM">%1$s</xliff:g> ekhethiwe"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"I-<xliff:g id="KEY">%1$s</xliff:g> isusiwe"</string>
 </resources>
