--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -27,5 +27,5 @@
     <string name="select_day" msgid="3973338219107019769">"Seleccionar mes y día"</string>
     <string name="select_year" msgid="2603330600102539372">"Seleccionar año"</string>
     <string name="item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> seleccionado"</string>
-    <string name="deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> eliminado(s)"</string>
+    <string name="deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> borrado"</string>
 </resources>
